<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="206dp"
                android:contentDescription="@string/cover_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:srcCompat="@drawable/background" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="220dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/appIcon"
                    app:srcCompat="@drawable/ic_maps" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/appName"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/appOwner" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/requiredAndroidVersion"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="167dp">

                <Button
                    android:id="@+id/uninstallButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/uninstallButtonText"
                    android:textColor="#689F38"
                    android:textSize="14sp"
                    android:theme="@style/Theme.MaterialComponents"
                    app:rippleColor="#00FFFFFF"
                    app:strokeColor="#689F38"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/openButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="#689F38"
                    android:backgroundTint="#689F38"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/openButtonText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="193dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="#C8C8C8" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="202dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/downloadsImage"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/ic_billion"
                        android:gravity="center"
                        android:text="@string/downloadsImageText"
                        android:textAlignment="gravity"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/downloadsText"
                        android:textAlignment="gravity" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ratingImage"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/ic_rating"
                        android:gravity="center"
                        android:text="@string/ratingImageText"
                        android:textAlignment="gravity"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">
                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/downloadsCount" />
                        <TextView
                            android:layout_width="14sp"
                            android:layout_height="14sp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_person"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/travelImage"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/ic_travel" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/travel_local"
                        android:textAlignment="gravity" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/similarImage"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/ic_similar" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/similar"
                        android:textAlignment="gravity" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:layout_editor_absoluteX="193dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="#C8C8C8" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/littleDescription"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


                <TextView
                    android:id="@+id/whatsNewText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#e7efe0"
                    android:paddingStart="50dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="50dp"
                    android:text="@string/whatsNewText"
                    android:textColor="#548c2b"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/whatsNewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#e7efe0"
                    android:paddingStart="50dp"
                    android:paddingEnd="52dp"
                    android:paddingBottom="30dp"
                    android:text="@string/whatsNewDescription"
                    android:textColor="#548c2b"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <TextView
                    android:id="@+id/readMoreImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_watch"
                    android:paddingStart="50dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="50dp"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/readMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:text="@string/readMoreText"
                    android:textColor="#548c2b"
                    android:textSize="15sp" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/photos1"
                        android:layout_width="150dp"
                        android:layout_height="267dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/photos1"
                        app:srcCompat="@drawable/hs1" />

                    <ImageView
                        android:id="@+id/photos2"
                        android:layout_width="150dp"
                        android:layout_height="267dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/photos2"
                        app:srcCompat="@drawable/hs2" />


                    <ImageView
                        android:id="@+id/photos3"
                        android:layout_width="150dp"
                        android:layout_height="267dp"
                        android:contentDescription="@string/photos3"
                        app:srcCompat="@drawable/hs3" />

                </LinearLayout>


            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>